public/styles/custom.css
body {
  font-family: "Inter", sans-serif;
}

.khabanh {
  position: relative;
}
.khabanh::before {
  content: "";
  background: url(https://blog.trungtin.codes/images/ColouredCloud1.svg)
    no-repeat center / contain;
  width: 3rem;
  height: 3rem;
  top: -2.1rem;
  left: 0;
  position: absolute;
  animation: moveSlowly 30s linear infinite;
}

@keyframes moveSlowly {
  from {
    transform: translateX(0);
  }
  50% {
    transform: translateX(5rem);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes moveBackward {
  from {
    transform: translateX(0) scaleX(-1);
  }
  50% {
    transform: translateX(-20px) scaleX(-1);
  }
  to {
    transform: translateX(0) scaleX(-1);
    opacity: 0.6;
  }
}

.khabanh2::before {
  content: "";
  background: url(/assets/images/khabanh2.png) no-repeat center / cover;
  background-position: 50%;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  animation: vibrate 2s infinite;
  z-index: -1;
  opacity: 0.7;
}

/* animation vibrate image */
@keyframes vibrate {
  0% {
    transform: rotate(0deg);
  }
  10% {
    transform: rotate(5deg);
  }
  20% {
    transform: rotate(-5deg);
  }
  30% {
    transform: rotate(5deg);
  }
  40% {
    transform: rotate(-5deg);
  }
  50% {
    transform: rotate(5deg);
  }
  60% {
    transform: rotate(-5deg);
  }
  70% {
    transform: rotate(5deg);
  }
  80% {
    transform: rotate(-5deg);
  }
  90% {
    transform: rotate(5deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

/* Scroll bar */
::-webkit-scrollbar {
  width: 0.5rem;
  height: 0.5rem;
}

